--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@reduxjs/toolkit": "^1.7.2",
