--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.18.3",
     "axios": "^0.24.0",
+    "echarts": "^5.3.1",
+    "echarts-for-react": "^3.0.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
