--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "echarts-for-react": "^3.0.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.2",
     "react-highlight-words": "^0.18.0",
     "react-redux": "^7.2.6",
