--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@reduxjs/toolkit": "^1.7.2",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.18.3",
     "axios": "^0.24.0",
+    "craco-less": "^3.0.1",
     "echarts": "^5.3.1",
     "echarts-for-react": "^3.0.2",
     "lodash": "^4.17.21",
@@ -23,14 +25,14 @@
     "react-highlight-words": "^0.18.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
